--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
         <h2 class="section-title text-center"><span><i class="arrow fas fa-chevron-left"></i>Recent Work<i class="arrow fas fa-chevron-right"></i></span></h2>
       <div class="container">
         <div class="row">
+
+          <!-- Project 3 -->
+          <div class="col-md-4">
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/arryvl.png" alt="Arryvl Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://arryvl.herokuapp.com/" target="_blank">Demo &rarr;</a></p>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-title text-center">Crumbs</p>
+                <p class="card-text text-center">Full Stack app that automatically notifies your friend when you've reached your destination</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/finito" target="_blank"><i
+                      class="justify-content-center icon fab fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- Project 2 -->
           <div class="col-md-4">
             <div class="card bg-transparent border-0 mb-4">
@@ -130,12 +151,12 @@
                 <img class="hover_image card-img-top card_shadow" src="assets/images/guestLister_small.png"
                   alt="GuestList Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="http://guestlisterapp.com" target="_blank">See More &rarr;</a></p>
+                  <p><a class="hover_text" href="http://guestlisterapp.com" target="_blank">Demo &rarr;</a></p>
                 </div>
               </div>
               <div class="card-body">
                 <p class="card-title text-center">GuestLister</p>
-                <p class="card-text text-center">Full Stack app for a sample way to plan an event</p>
+                <p class="card-text text-center">Full Stack app for a sample way to plan an event (Sign In info -- user: Admin /  password: 12345)</p>
                 <div class="d-flex justify-content-center">
                   <a href="https://github.com/megangilpin/Project-2" target="_blank"><i class="justify-content-center icon fab fa-github"></i></a>
                 </div>
@@ -148,7 +169,7 @@
               <div class="hover_container">
                 <img class="hover_image card-img-top card_shadow" src="assets/images/crumbs2.png" alt="Crumbs Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="https://crumbs-243103.firebaseapp.com" target="_blank">See More &rarr;</a></p>
+                  <p><a class="hover_text" href="https://crumbs-243103.firebaseapp.com" target="_blank">Demo &rarr;</a></p>
                 </div>
               </div>
               <div class="card-body">
@@ -166,9 +187,9 @@
           <div class="col-md-4">
             <div class="card bg-transparent border-0 mb-4">
               <div class="hover_container">
-                <img class="hover_image card-img-top card_shadow" src="assets/images/colorClick.png" alt="Friend Finder Img">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/colorClick.png" alt="Color Click Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="https://clicky-m-game.herokuapp.com/" target="_blank">See More &rarr;</a>
+                  <p><a class="hover_text" href="https://clicky-m-game.herokuapp.com/" target="_blank">Demo &rarr;</a>
                   </p>
                 </div>
               </div>
@@ -189,7 +210,7 @@
               <div class="hover_container">
                 <img class="hover_image card-img-top card_shadow" src="assets/images/friendFinder.png" alt="Friend Finder Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="https://secure-citadel-28458.herokuapp.com/" target="_blank">See More &rarr;</a></p>
+                  <p><a class="hover_text" href="https://secure-citadel-28458.herokuapp.com/" target="_blank">Demo &rarr;</a></p>
                 </div>
               </div>
               <div class="card-body">
@@ -209,7 +230,7 @@
               <div class="hover_container">
                 <img class="hover_image card-img-top card_shadow" src="assets/images/whichSandwich.png" alt="Sandwich Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="https://fast-fortress-18955.herokuapp.com/" target="_blank">See More &rarr;</a>
+                  <p><a class="hover_text" href="https://fast-fortress-18955.herokuapp.com/" target="_blank">Demo &rarr;</a>
                   </p>
                 </div>
               </div>
@@ -230,7 +251,7 @@
               <div class="hover_container">
                 <img class="hover_image card-img-top card_shadow" src="assets/images/triviaGame.png" alt="TriviaGame Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="https://megangilpin.github.io/Trivia-Game/" target="_blank">See More &rarr;</a>
+                  <p><a class="hover_text" href="https://megangilpin.github.io/Trivia-Game/" target="_blank">Demo &rarr;</a>
                   </p>
                 </div>
               </div>
@@ -251,7 +272,7 @@
               <div class="hover_container">
                 <img class="hover_image card-img-top card_shadow" src="assets/images/giphyApi_small.png" alt="Giphy Api Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="https://megangilpin.github.io/GiphyAPI/" target="_blank">See More &rarr;</a>
+                  <p><a class="hover_text" href="https://megangilpin.github.io/GiphyAPI/" target="_blank">Demo &rarr;</a>
                   </p>
                 </div>
               </div>
@@ -272,7 +293,7 @@
               <div class="hover_container">
                 <img class="hover_image card-img-top card_shadow" src="assets/images/jewelCollectorGame.png" alt="JewelCollectorGame Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="https://megangilpin.github.io/Jewel-Collector/" target="_blank">See More &rarr;</a>
+                  <p><a class="hover_text" href="https://megangilpin.github.io/Jewel-Collector/" target="_blank">Demo &rarr;</a>
                   </p>
                 </div>
               </div>
@@ -293,7 +314,7 @@
               <div class="hover_container">
                 <img class="hover_image card-img-top card_shadow" src="assets/images/wordGuessGame.png" alt="WordGuessGame Img">
                 <div class="overlay">
-                  <p><a class="hover_text" href="https://megangilpin.github.io/WordGuessGame/" target="_blank">See More
+                  <p><a class="hover_text" href="https://megangilpin.github.io/WordGuessGame/" target="_blank">Demo
                       &rarr;</a>
                   </p>
                 </div>
