--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
       <div class="col-md-8 widget mx-3">
         <h3 class="footer-title">About Me</h3>
         <div class="footer-body">
-          <p>Versatile and creative menswear designer with a passion for innovation. Proven ability to oversee the strategy
-            and growth of product categories through an excellent understanding of global market needs and product
-            development.
+          <p>Versatile full stack engineer at the intersection of functionality and design with 10 years of experience as a menswear
+          designer developing creative consumer-focused products and the proven ability to oversee the strategy and growth of
+          product categories.
             <br> <br>
             Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines and
             within cross functional teams. Have a look for yourself by clicking on the link to my fashion design portfolio: <a class="portfolio" href="https://www.mgilpindesign.com/">www.mgilpindesgin.com</a></p>
