--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
               </div>
               <div class="card-body">
-                <p class="card-title text-center">Crumbs</p>
+                <p class="card-title text-center">Arryvl</p>
                 <p class="card-text text-center">Full Stack app that automatically notifies your friend when you've reached your destination</p>
                 <div class="d-flex justify-content-center">
                   <a href="https://github.com/megangilpin/finito" target="_blank"><i
