added right link

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                   <p class="card-title text-center">NYC Trivia Game</p>
                   <p class="card-text mt-1 text-center">Timed trivia game</p>
                   <div class="d-flex justify-content-center">
-                    <a href="https://megangilpin.github.io/Trivia-Game/" target="_blank"><i
+                    <a href="https://github.com/megangilpin/Trivia-Game" target="_blank"><i
                         class="justify-content-center icon fab fa-github"></i></a>
                   </div>
                   <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with setTimeout(),
