--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <a href="https://github.com/megangilpin/Jewel-Collector" target="_blank"><i
                         class="justify-content-center icon fab fa-github"></i></a>
                   </div>
-                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with JQuery, CSS and
+                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with JQuery, CSS
                     Bootstrap <i class="tech fas fa-chevron-right"></i></p>
                 </div>
               </div>
