updated about me

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           <a class="nav py-2 mx-4 d-sm-inline-block" href="#recent_works">RECENT WORK</a>
           <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/Megan_Gilpin_Engineer_Resume.pdf"
             target="_blank">RESUME</a>
+          <a class="nav py-2 mx-4 d-sm-inline-block" href="#about_me">ABOUT ME</a>
           <a data-toggle="modal" href=".bd-example-modal-lg" class=" nav py-2 mx-4 d-sm-inline-block">CONTACT</a>
         </div>
       </div>
@@ -111,7 +112,7 @@
     <!-- technical skills -->
     <section class="jumbotron text-center">
       <div class="container skills">
-        <h1 class="jumbotron-heading technical-title"><i class="arrow fas fa-chevron-left"></i>Technical Skills<i
+        <h1 class="jumbotron-heading section-title"><i class="arrow fas fa-chevron-left"></i>Technical Skills<i
             class="arrow fas fa-chevron-right"></i></h1>
         <div class="row">
           <div class="col-xs-12">
@@ -397,31 +398,21 @@
   </main>
 
   <footer class="text-muted mt-100">
-    <div class="container">
+    <div class="container" id="about_me">
       <div class="row">
-        <div class="col-md-3 widget mx-3 mb-3">
-          <h3 class="footer-title">Follow me</h3>
-          <div class="footer-body">
-            <a class="footer-icon icon" href="https://github.com/megangilpin" target="_blank"><i
-                class="fab fa-github"></i></a>
-            <a class="footer-icon icon" href="https://www.linkedin.com/in/megan-gilpin/" target="_blank"><i
-                class="fab fa-linkedin"></i></a>
-          </div>
-        </div>
 
-        <div class="col-md-8 widget mx-3">
-          <h3 class="footer-title">About Me</h3>
-          <div class="footer-body">
-            <p>Versatile full stack engineer at the intersection of functionality and design with 10 years of experience
-              as a menswear
-              designer developing creative consumer-focused products and the proven ability to oversee the strategy and
-              growth of
-              product categories.
-              <br> <br>
-              Highly skilled communicator and project manager who works well in fast-paced environments with tight
-              deadlines and
-              within cross functional teams. Have a look for yourself by clicking on the link to my fashion design
-              portfolio: <a class="portfolio" href="https://www.mgilpindesign.com/">www.mgilpindesgin.com</a></p>
+        <div class="col-md-12 widget my-3">
+          <h1 class="jumbotron-heading footer-title mb-2">About Me</h1>
+          <div class="footer-body about">
+            <p>Full Stack Engineer at the intersection of functionality and design with 10 years of experience developing creative consumer-focused products. Proven ability to oversee the strategy and growth of product lines. Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines. An underlying passion for innovation drove me to the pursuit of full stack web development through the Columbia Engineering Boot camp
+             </p>
+
+            <div class="mt-4">
+              <a class="footer-icon icon" href="https://github.com/megangilpin" target="_blank"><i class="fab fa-github"></i></a>
+              <a class="footer-icon icon" href="https://www.linkedin.com/in/megan-gilpin/" target="_blank"><i
+                  class="fab fa-linkedin"></i></a>
+            </div>
+
           </div>
         </div>
       </div>
