--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <div class="container d-flex flex-column flex-md-row justify-content-center">
           <a class="nav py-2 mx-4 d-sm-inline-block" href="#recent_works">RECENT WORK</a>
-          <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/Megan_Gilpin_Engineer_Resume.pdf"
+          <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/M_Gilpin_Engineer_Resume.pdf"
             target="_blank">RESUME</a>
           <a class="nav py-2 mx-4 d-sm-inline-block" href="#about_me">ABOUT ME</a>
           <a data-toggle="modal" href=".bd-example-modal-lg" class=" nav py-2 mx-4 d-sm-inline-block">CONTACT</a>
@@ -404,7 +404,7 @@
         <div class="col-md-12 widget my-3">
           <h1 class="jumbotron-heading footer-title mb-2">About Me</h1>
           <div class="footer-body about">
-            <p>Full Stack Engineer at the intersection of functionality and design with 10 years of experience developing creative consumer-focused products. Proven ability to oversee the strategy and growth of product lines. Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines. An underlying passion for innovation drove me to the pursuit of full stack web development through the Columbia Engineering Boot camp
+            <p>Full Stack Engineer at the intersection of functionality and design with 10 years of experience developing creative consumer-focused products. Proven ability to oversee the strategy and growth of product lines. Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines. An underlying passion for innovation drove me to the pursuit of full stack web development through the Columbia Engineering Boot camp.
              </p>
 
             <div class="mt-4">
