--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <div class="container d-flex flex-column flex-md-row justify-content-center">
           <a class="nav py-2 mx-4 d-sm-inline-block" href="#recent_works">RECENT WORK</a>
-          <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/Megan_Gilpin_Resume_Engineer.pdf"
+          <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/MGilpin_Resume.pdf"
             target="_blank">RESUME</a>
           <a class="nav py-2 mx-4 d-sm-inline-block" href="#about_me">ABOUT ME</a>
           <a data-toggle="modal" href=".bd-example-modal-lg" class=" nav py-2 mx-4 d-sm-inline-block">CONTACT</a>
@@ -129,6 +129,30 @@
               class="arrow fas fa-chevron-right"></i></span></h2>
         <div class="container">
           <div class="row">
+
+            <!-- Shopaholic -->
+            <div class="col-md-4">
+              <div class="card bg-transparent border-0 mb-4">
+                <div class="hover_container">
+                  <img class="hover_image card-img-top card_shadow" src="assets/images/Shopaholic.png" alt="Arryvl Img">
+                  <div class="overlay">
+                    <p><a class="hover_text" href="https://shop-next-prod.herokuapp.com/" target="_blank">Visit App &rarr;</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <p class="card-title text-center">Shopaholic</p>
+                  <p class="card-text mt-1 text-center">Full stack online clothing store with user authentication and credit card checkout</p>
+
+                  <div class="d-flex justify-content-center">
+                    <a href="https://github.com/megangilpin/shopaholic" target="_blank"><i
+                        class="justify-content-center icon fab fa-github"></i></a>
+                  </div>
+                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with React.js, Apollo-Client, GraphQL, GraphQL Yoga, Prisma, Stripe API, Node.js, Jest.js, Enzyme<i class="tech fas fa-chevron-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div>
 
             <!-- Project 3 -->
             <div class="col-md-4">
