added SASS project

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="col-md-4">
               <div class="card bg-transparent border-0 mb-4">
                 <div class="hover_container">
-                  <img class="hover_image card-img-top card_shadow" src="assets/images/Shopaholic.png" alt="Arryvl Img">
+                  <img class="hover_image card-img-top card_shadow" src="assets/images/Shopaholic.png" alt="Shopaholic Img">
                   <div class="overlay">
                     <p><a class="hover_text" href="https://shop-next-prod.herokuapp.com/" target="_blank">Visit App &rarr;</a>
                     </p>
@@ -176,6 +176,31 @@
                   <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with Mongo DB,
                     Express.js, React.js,
                     Node.js, Google Maps API, Twilio, JavaScript, JQUERY, HTML5, CSS, Bootstrap <i
+                      class="tech fas fa-chevron-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Advanced CSS and SASS project -->
+            <div class="col-md-4">
+              <div class="card bg-transparent border-0 mb-4">
+                <div class="hover_container">
+                  <img class="hover_image card-img-top card_shadow" src="assets/images/natours.png" alt="Natours Img">
+                  <div class="overlay">
+                    <p><a class="hover_text" href="https://megangilpin.github.io/Adventures-in-SASS/" target="_blank">Visit App &rarr;</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <p class="card-title text-center">Natours</p>
+                  <p class="card-text mt-1 text-center">Advanced CSS and SASS website for an adventure company</p>
+
+                  <div class="d-flex justify-content-center">
+                    <a href="https://github.com/megangilpin/Adventures-in-SASS" target="_blank"><i
+                        class="justify-content-center icon fab fa-github"></i></a>
+                  </div>
+                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with SASS, CSS, HTML, Node.js<i
                       class="tech fas fa-chevron-right"></i>
                   </p>
                 </div>
