added chef menu

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <div class="container d-flex flex-column flex-md-row justify-content-center">
           <a class="nav py-2 mx-4 d-sm-inline-block" href="#recent_works">RECENT WORK</a>
-          <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/MGilpin_Resume.pdf"
+          <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/MeganGilpin_Resume.pdf"
             target="_blank">RESUME</a>
           <a class="nav py-2 mx-4 d-sm-inline-block" href="#about_me">ABOUT ME</a>
           <a data-toggle="modal" href=".bd-example-modal-lg" class=" nav py-2 mx-4 d-sm-inline-block">CONTACT</a>
@@ -130,6 +130,30 @@
         <div class="container">
           <div class="row">
 
+            <!-- Chef's Menu -->
+            <div class="col-md-4">
+              <div class="card bg-transparent border-0 mb-4">
+                <div class="hover_container">
+                  <img class="hover_image card-img-top card_shadow" src="assets/images/chefsmenu.png" alt="Chefs Menu App">
+                  <div class="overlay">
+                    <p><a class="hover_text" href="https://chefsmenu1.herokuapp.com/" target="_blank">Visit App &rarr;</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <p class="card-title text-center">Chef's Menu</p>
+                  <p class="card-text mt-1 text-center">Full stack marketplace where user can book a chef in their area based on cuisine type and availability</p>
+
+                  <div class="d-flex justify-content-center">
+                    <a href="https://github.com/megangilpin/chefs-menu" target="_blank"><i
+                        class="justify-content-center icon fab fa-github"></i></a>
+                  </div>
+                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with React.js, Material UI, MongoDB, Google Maps API, Stripe, AWS, Node.js <i class="tech fas fa-chevron-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div>
+
             <!-- Shopaholic -->
             <div class="col-md-4">
               <div class="card bg-transparent border-0 mb-4">
@@ -148,7 +172,31 @@
                     <a href="https://github.com/megangilpin/shopaholic" target="_blank"><i
                         class="justify-content-center icon fab fa-github"></i></a>
                   </div>
-                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with React.js, Apollo-Client, GraphQL, GraphQL Yoga, Prisma, Stripe API, Node.js, Jest.js, Enzyme<i class="tech fas fa-chevron-right"></i>
+                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with React.js, Apollo-Client, GraphQL, GraphQL Yoga, Prisma, Stripe API, Node.js, Jest.js, Enzyme <i class="tech fas fa-chevron-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Wedding -->
+            <div class="col-md-4">
+              <div class="card bg-transparent border-0 mb-4">
+                <div class="hover_container">
+                  <img class="hover_image card-img-top card_shadow" src="assets/images/wedding.png" alt="Wedding App">
+                  <div class="overlay">
+                    <p><a class="hover_text" href="https://www.megwedsmike.com/" target="_blank">Visit App &rarr;</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <p class="card-title text-center">Wedding</p>
+                  <p class="card-text mt-1 text-center">Fully responsive single page website to communicate details and information for a wedding</p>
+
+                  <div class="d-flex justify-content-center">
+                    <a href="https://github.com/megangilpin/wedding" target="_blank"><i
+                        class="justify-content-center icon fab fa-github"></i></a>
+                  </div>
+                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with AdobeXD, SASS, HTML, CSS, JavaScript <i class="tech fas fa-chevron-right"></i>
                   </p>
                 </div>
               </div>
@@ -200,7 +248,7 @@
                     <a href="https://github.com/megangilpin/Adventures-in-SASS" target="_blank"><i
                         class="justify-content-center icon fab fa-github"></i></a>
                   </div>
-                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with SASS, CSS, HTML, Node.js<i
+                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with SASS, CSS, HTML, Node.js <i
                       class="tech fas fa-chevron-right"></i>
                   </p>
                 </div>
