--- a/index.html
+++ b/index.html
@@ -230,31 +230,6 @@
               </div>
             </div>
 
-            <!-- Advanced CSS and SASS project -->
-            <div class="col-md-4">
-              <div class="card bg-transparent border-0 mb-4">
-                <div class="hover_container">
-                  <img class="hover_image card-img-top card_shadow" src="assets/images/natours.png" alt="Natours Img">
-                  <div class="overlay">
-                    <p><a class="hover_text" href="https://megangilpin.github.io/Adventures-in-SASS/" target="_blank">Visit App &rarr;</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <p class="card-title text-center">Natours</p>
-                  <p class="card-text mt-1 text-center">Advanced CSS and SASS website for an adventure company</p>
-
-                  <div class="d-flex justify-content-center">
-                    <a href="https://github.com/megangilpin/Adventures-in-SASS" target="_blank"><i
-                        class="justify-content-center icon fab fa-github"></i></a>
-                  </div>
-                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with SASS, CSS, HTML, Node.js <i
-                      class="tech fas fa-chevron-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div>
-
             <!-- Project 2 -->
             <div class="col-md-4">
               <div class="card bg-transparent border-0 mb-4">
@@ -262,7 +237,7 @@
                   <img class="hover_image card-img-top card_shadow" src="assets/images/guestLister_small.png"
                     alt="GuestList Img">
                   <div class="overlay">
-                    <p><a class="hover_text" href="http://guestlisterapp.com" target="_blank">Visit App &rarr;</a></p>
+                    <p><a class="hover_text" href="https://meey-project2.herokuapp.com " target="_blank">Visit App &rarr;</a></p>
                   </div>
                 </div>
                 <div class="card-body">
@@ -281,6 +256,7 @@
                 </div>
               </div>
             </div>
+            
             <!-- Project 1 -->
             <div class="col-md-4">
               <div class="card bg-transparent border-0 mb-4">
@@ -358,33 +334,6 @@
               </div>
             </div>
 
-            <!-- Sandwich -->
-            <div class="col-md-4">
-              <div class="card bg-transparent border-0 mb-4">
-                <div class="hover_container">
-                  <img class="hover_image card-img-top card_shadow" src="assets/images/whichSandwich.png"
-                    alt="Sandwich Img">
-                  <div class="overlay">
-                    <p><a class="hover_text" href="https://fast-fortress-18955.herokuapp.com/" target="_blank">Visit App
-                        &rarr;</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <p class="card-title text-center">Which Sandwich?</p>
-                  <p class="card-text mt-1 text-center">Restaurant app to find the best sandwich</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://github.com/megangilpin/Sandwich" target="_blank"><i
-                        class="justify-content-center icon fab fa-github"></i></a>
-                  </div>
-                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with Express.js, Node.js,
-                    MySQL,
-                    Handlebars, JavaScript,
-                    jQuery HTML5, Bootstrap, CSS <i class="tech fas fa-chevron-right"></i></p>
-                </div>
-              </div>
-            </div>
-
             <!-- Trivia Game -->
             <div class="col-md-4">
               <div class="card bg-transparent border-0 mb-4">
@@ -410,83 +359,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Giphy App -->
-            <div class="col-md-4">
-              <div class="card bg-transparent border-0 mb-4">
-                <div class="hover_container">
-                  <img class="hover_image card-img-top card_shadow" src="assets/images/giphyApi_small.png"
-                    alt="Giphy Api Img">
-                  <div class="overlay">
-                    <p><a class="hover_text" href="https://megangilpin.github.io/GiphyAPI/" target="_blank">Visit App
-                        &rarr;</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <p class="card-title text-center">Get Giphy</p>
-                  <p class="card-text mt-1 text-center">Search for pop culture gifs</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://github.com/megangilpin/GiphyAPI" target="_blank"><i
-                        class="justify-content-center icon fab fa-github"></i></a>
-                  </div>
-                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with AJAX, JavaScript,
-                    jQuery, Bootstrap, HTML, CSS <i class="tech fas fa-chevron-right"></i></p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Jewel Collector Game -->
-            <div class="col-md-4">
-              <div class="card bg-transparent border-0 mb-4">
-                <div class="hover_container">
-                  <img class="hover_image card-img-top card_shadow" src="assets/images/jewelCollectorGame.png"
-                    alt="JewelCollectorGame Img">
-                  <div class="overlay">
-                    <p><a class="hover_text" href="https://megangilpin.github.io/Jewel-Collector/" target="_blank">Visit
-                        App &rarr;</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <p class="card-title text-center">Jewel Collector Game</p>
-                  <p class="card-text mt-1 text-center">Collect points to match a randomly selected number </p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://github.com/megangilpin/Jewel-Collector" target="_blank"><i
-                        class="justify-content-center icon fab fa-github"></i></a>
-                  </div>
-                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with JQuery, CSS
-                    Bootstrap <i class="tech fas fa-chevron-right"></i></p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Word Guess Game -->
-            <div class="col-md-4">
-              <div class="card bg-transparent border-0 mb-4">
-                <div class="hover_container">
-                  <img class="hover_image card-img-top card_shadow" src="assets/images/wordGuessGame.png"
-                    alt="WordGuessGame Img">
-                  <div class="overlay">
-                    <p><a class="hover_text" href="https://megangilpin.github.io/WordGuessGame/" target="_blank">Visit
-                        App
-                        &rarr;</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <p class="card-title text-center">WORD GUESS GAME</p>
-                  <p class="card-text mt-1 text-center">The Wizard of Oz themed word guess game</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://github.com/megangilpin/WordGuessGame" target="_blank"><i
-                        class="justify-content-center icon fab fa-github"></i></a>
-                  </div>
-                  <p class="text-center mt-2"><i class="tech fas fa-chevron-left"></i> Created with Javascript, CSS,
-                    Bootstrap <i class="tech fas fa-chevron-right"></i></p>
-                </div>
-              </div>
-            </div>
-
 
           </div>
         </div>
